---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 29. 11. 2024
  Major Features:
    - Rewritten most of the code
    - Added inserter blacklists for direction and length changes
  Locale:
    - Fixed some typos

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 26. 11. 2024
  Minor Features:
    - Added a sound for changing settings
    - Added a notification for changing settings using keybinds

  Bugfixes:
    - Fixed a crash related to using keybinds outside inserters
    - Fixed incorrect keybind

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 26. 11. 2024
  Major Features:
    - Initial release.