@@ -24,11 +24,11 @@ inserter-config-lane=Change inserter's target dropoff lane
 inserter-config-length=Change inserter's arm length
 
 [mods-settings-name]
-inserter-config-remove-long-inserters=Hide long inserters
+inserter-config-remove-long-inserters=Hide [recipe=long-handed-inserter]
 inserter-config-lenght-blacklist=Insert confing blacklist: Lenght
 inserter-config-direction-blacklist=Insert confing blacklist: Direction
 
 [mods-settings-description]
-inserter-config-remove-long-inserters=Hide long inserters
+inserter-config-remove-long-inserters=Hides long inserter's recipe. [Doesn't remove existing instances of the recipe or existing [entity=long-handed-inserter]]
 inserter-config-lenght-blacklist=A list of inserter entity names that should not be able to change their arm lenght. (comma-separated list)
 inserter-config-direction-blacklist=A list of inserter entity names that should not be able to change their dropoff direction. (comma-separated list)
