@@ -1,5 +1,12 @@
 data:extend({
 	{
+		type = "bool-setting",
+		name = "inserter-config-remove-long-inserters",
+		order = "a-a",
+		setting_type = "startup",
+		default_value = true,
+	},
+	{
 		type = "string-setting",
 		name = "inserter-config-length-blacklist",
 		order = "b-a",
