@@ -1,11 +1,15 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.0
-Date: 29. 11. 2024
+Date: 30. 11. 2024
   Major Features:
-    - Rewritten most of the code
     - Added inserter blacklists for direction and length changes
+    - Support for Kuxynator's Slim-Inserters
+  Changes:
+    - Rewritten most of the code
+    - Changed the mod's name
   Locale:
     - Fixed some typos
+
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
